(FIX) : corrected margin for body content op half when displaying on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -165,12 +165,9 @@ body {
     display: block;
   }
 }
-.page-header {
-  width: 100vw;
-}
 .navigation-container {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   margin: 0 auto;
   background-color: #99A4AF;
   z-index: 10;
@@ -222,7 +219,7 @@ a:visited {
 }
 @media (max-width: 400px) {
   .hero-image-container .desktop-image {
-    width: 100%;
+    background-size: cover;
     height: 300px;
     padding: 0;
     margin: 0;
@@ -256,11 +253,13 @@ a:visited {
   }
 }
 .body-content-top-half {
-  margin: 50px 5%;
+  margin-top: 50px;
+  width: 100vw;
 }
 @media (max-width: 400px) {
   .body-content-top-half {
     margin-bottom: 10px;
+    margin-left: 10%;
   }
 }
 .body-content-top-half .top-half-container-1 {
@@ -271,6 +270,17 @@ a:visited {
 }
 .body-content-top-half .top-half-container-1 img {
   width: 100%;
+}
+@media (max-width: 400px) {
+  .body-content-top-half .top-half-container-1 img {
+    background-size: cover;
+  }
+}
+@media (max-width: 400px) {
+  .body-content-top-half .top-half-container-1 {
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
 .body-content-top-half .text-container {
   height: 190px;
@@ -328,13 +338,14 @@ a:visited {
 }
 @media (max-width: 400px) {
   .body-content-top-half .top-half-container-2 {
-    flex-direction: column-reverse;
+    display: flex;
+    flex-direction: column;
   }
 }
 .body-content-top-half .top-half-container-2 .text-container {
   order: 3;
   margin-top: 50px;
-  margin-left: 25px;
+  margin-left: 0;
 }
 .body-content-bottom-half {
   margin: 0 5%;
@@ -422,6 +433,11 @@ footer .footer-container {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 400px) {
+  footer .footer-container {
+    flex-direction: column;
+  }
 }
 footer .footer-container .footer-form {
   display: flex;
