--- a/less/footer.less
+++ b/less/footer.less
@@ -19,6 +19,10 @@ footer {
   display: flex;
   justify-content: space-between;
 
+  @media (max-width: 400px) {
+    flex-direction: column;
+  }
+
   .footer-form {
     display: flex;
     flex-direction: column;
