--- a/less/home.less
+++ b/less/home.less
@@ -12,7 +12,7 @@
     display: block;
 
     @media (max-width: 400px) {
-      width: 100%;
+      background-size: cover;
       height: 300px;
       padding: 0;
       margin: 0;
@@ -45,10 +45,12 @@
 }
 
 .body-content-top-half {
-  margin: 50px 5%;
+  margin-top: 50px;
+  width: 100vw;
 
   @media (max-width: 400px) {
     margin-bottom: 10px;
+    margin-left: 10%;
   }
 
   .top-half-container-1 {
@@ -59,6 +61,15 @@
 
     img {
       width: 100%;
+
+      @media (max-width: 400px) {
+        background-size: cover;
+      }
+    }
+
+    @media (max-width: 400px) {
+      display: flex;
+      flex-direction: column-reverse;
     }
   }
 
@@ -116,13 +127,14 @@
     margin-bottom: 100px;
 
     @media (max-width: 400px) {
-      flex-direction: column-reverse;
+      display: flex;
+      flex-direction: column;
     }
 
     .text-container {
       order: 3;
       margin-top: 50px;
-      margin-left: 25px;
+      margin-left: 0;
     }
   }
 }
