--- a/less/services.less
+++ b/less/services.less
@@ -11,9 +11,21 @@
     height: 100%;
 
     h1 {
-      .jumbotron-text-style;
-      position: absolute;
-      top: 155px;
+     color: purple;
+      //.jumbotron-text-style;
+      //position: absolute;
+      //top: 155px;
+    }
+  }
+
+  .services-content {
+    border: 10px solid green;
+    width: 80%;
+    max-width: 90%;
+    margin-bottom: 100px;
+
+    p {
+      color: red;
     }
   }
 }
